src/styles.css
body {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 300;
    font-size: 1em;
}

.bodyContainer {
    max-width: 600px;
    margin: 0 auto;
}

.headerContainer {
    box-sizing: border-box;
    text-align: center;
    font-style: italic;
    font-size: 600%;
    color: black;
    background-color: #FFD662;
    cursor: pointer;
}

.headerContainer:hover {
    filter: brightness(85%);
}

.feature:hover {
    filter: brightness(85%);
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                    supported by Chrome and Opera */
}

.featureContainer {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin: 2px 0px;
}

.feature {
    box-sizing: border-box;
    padding: 10px;
    margin: 2px 0px;
    color: black;
    background-color: #FFD662;
    text-decoration: none;
    word-wrap: break-word;
    cursor: pointer;
}

.feature:hover {
    filter: brightness(85%);
}

.featureKey {
    display: inline-block;
    font-weight: 600;
}

.featureValue {
    display: inline-block;
}

.linkHub {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    flex-wrap: wrap;
    box-sizing: border-box;
    margin: 4px 0px;
}

.linkButton {
    border-width: 1px;
    border-style: solid;
    border-radius: 4px;
    border-color: #FFD662;
    box-sizing: border-box;
    padding: 4px 8px;
    margin: 3px 3px;
}

a {
    color: black;
    text-decoration: none;
}

a:active {
    text-decoration: none;
}

a:visited {
    text-decoration: none;
}

a:hover {
    text-decoration: none;
}

.copy {
    position: fixed;
    bottom: 4px;
    font-size: 0.8em;
    padding: 8px;
}

@media screen and (max-width: 600px) {
    body {
        margin: 0px;
    }

    .bodyContainer {
        margin-bottom: 150px;
    }

    .featureContainer {
        margin-left: 8px;
        margin-right: 8px;
    }

    .linkHub {
        margin-left: 6px;
    }
}

